# pdf-chef

./: .gitignore  README.md  main.py  makefile  pyproject.toml
notebooks/: my_recipes.ipynb
recipes/: fried_rice.json  leidsche_kots.json  pasta_groene_pesto_kip.json  pasta_rode_pesto_kip.json  pesto_burger_mozzarella.json  pompoen_risotto.json  pulled_chicken_wraps.json  spaghetti_carbonara.json  zoete_aardappel_stamppot.json
src/: config_manager.py  mobile_recipe_build.py  mobile_recipe_builder copy.py  mobile_recipe_builder.py  mobile_recipe_builder_future_state.py  mobile_recipe_builder_old.py  page_builder.py
src/configs/: config_mobile_recipes.yaml
src/pdf_chef/: config_manager.py  constants.py  mobile_recipe_build.py  mobile_recipe_builder_old.py  page_builder.py  recipe_renderer.py  text_segment.py
src/pdf_chef/configs/: config_mobile_recipes.yaml
src/pdf_chef/utils/: utils_colors.py  utils_file_system.py
