[project]
name = "pdf-chef"
version = "0.1.0"
description = "Code for converting .json files into good looking pdf documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.9",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.3",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
