[project]
name = "pdf-chef"
version = "0.1.0"
description = "Code for converting .json files into good looking pdf documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "reportlab>=5.0.0",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "docstring-tailor>=0.3.0",
    "ty>=0.0.62",
    "ruff>=0.15.22",
]

# UV settings
[tool.uv]
default-groups = ["dev"]

# Docstring-tailor settings

[tool.docstring_tailor]
line-length = 80
style = "google"

# Build settings

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_chef"]